Initial commit - based on diceroller example

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+body {
+  color: #fff;
+  background-color: #222;
+}
+.app {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  cursor: pointer;
+}
+.container {
+  width: 100%;
+  max-width: 500px;
+  text-align: center;
+  margin: 2em auto;
+  padding: 2em;
+  border-radius: 2em;
+}
+.button {
+  padding: .5em 1em;
+  margin: 0 2em 0 0;
+  background-color: #222;
+  border-color: #f00;
+  box-shadow: 4px 4px 10px #fff;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dicebag {
+  border: solid 2px #00c;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.dicehand {
+  border: solid 2px #fff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result {
+  border: solid 5px #ff0;
 }
